<resources>
    <string name="app_name">ExpertTalk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text">Şifreniz</string>
    <string name="email_text">E-posta adresiniz</string>
    <string name="sign_in_text">Giriş Yap</string>
    <string name="forget_password">Şifremi Unuttum</string>
    <string name="create_account_text">Hesap Oluşturun (Müşteri)</string>
    <string name="create_account_expert_text">Hesap Oluşturun (Uzman)</string>
    <string name="sign_in_expert_page">Uzman Hesabına Giriş Yapın</string>
    <string name="welcome_text">Hoş geldiniz</string>
    <string name="sign_in_description_text">Expert talk uygulamasına giriş yapmak üzeresiniz.</string>
    <string name="expert_sign_in_description_text">Expert talk uygulamasına Uzman olarak giriş yapmak üzeresiniz.</string>
    <string name="sign_up_text">Kayıt Olun</string>
    <string name="sign_up_name_text">Ad-Soyad</string>
    <string name="sign_up_button_text">Kayıt Ol</string>
    <string name="already_have_an_account_text">Hesabınız varsa Giriş Yapın</string>
    <string name="password_again_text">Şifre tekrar</string>
    <string name="phone_text">Telefon</string>
    <string name="sign_up_expert_id">T.C Kimlik No</string>
    <string name="sign_up_minute_text">Seans Süresi (dk)</string>
    <string name="sign_up_expert_price_text">Seans Ücreti (TL)</string>
    <string name="introduce_yourself">Lütfen kendinizi çok kısa tanıtın</string>
    <string name="introduce_yourself_long">Lütfen kendinizi oldukça uzun bir şekilde tanıtın \n (Tecrübeleriniz, Eğitiminiz, Uzmanlık Alanınız, \n Çalışma Geçmişiniz v.b)</string>
    <string name="expert_sign_up_text">Uzman Başvuru Formu</string>
    <string name="select_expert_categorie_text">Uzmanlık Kategorisi Seçin</string>
    <string name="condition_expert_job">ExpertTalk ekibine katılmak ve online danışmanlık hizmeti vermek için formu doldurmanız gerekmektedir.</string>


    <!-- Coach Texts -->
    <string name="coach_type_text">Koçluk Tipi</string>
    <string name="coach_type_text_checkbox_1">Kurumsal ve Bireysel</string>
    <string name="coach_type_text_checkbox_2">Kurumsal</string>
    <string name="coach_type_text_checkbox_3">Bireysel</string>

    <string name="coach_areas_text">Koçluk Yaptığınız Alanlar</string>
    <string name="coach_areas_checkbox_1">Akademik</string>
    <string name="coach_areas_checkbox_2">Dikkat Eksikliği</string>
    <string name="coach_areas_checkbox_3">Evebeyn</string>
    <string name="coach_areas_checkbox_4">Girişimci</string>
    <string name="coach_areas_checkbox_5">İlişki</string>
    <string name="coach_areas_checkbox_6">İş geliştirme</string>
    <string name="coach_areas_checkbox_7">Kariyer</string>
    <string name="coach_areas_checkbox_8">Mentor</string>
    <string name="coach_areas_checkbox_9">Öğrenci</string>
    <string name="coach_areas_checkbox_10">Pazarlama/Satış</string>
    <string name="coach_areas_checkbox_11">Süpervizyon</string>
    <string name="coach_areas_checkbox_12">Üst kademe yönetici</string>
    <string name="coach_areas_checkbox_13">Yaşam</string>
    <string name="coach_areas_checkbox_14">Yazar</string>
    <string name="coach_areas_checkbox_15">Yönetici</string>

    <string name="coach_language_text">Hangi Dilde Koçluk</string>
    <string name="coach_language_checkbox_1">Türkçe</string>
    <string name="coach_language_checkbox_2">İngilizce</string>
    <string name="coach_language_checkbox_3">Almanca</string>
    <string name="coach_language_checkbox_4">İtalyanca</string>
    <string name="coach_language_checkbox_5">Fransızca</string>
    <string name="coach_language_checkbox_6">Çince</string>
    <string name="coach_language_checkbox_7">Arapça</string>
    <string name="coach_language_checkbox_8">Farsça</string>
    <string name="coach_language_checkbox_9">İspanyolca</string>
    <string name="coach_language_checkbox_10">Japonca</string>
    <string name="coach_language_checkbox_11">Rusça</string>
    <string name="coach_language_checkbox_12">Yunanca</string>

    <!-- Lawyer Texts -->
    <string name="lawyer_type_text">Avukat türü</string>
    <string name="lawyer_type_checkbox_1">Boşanma</string>
    <string name="lawyer_type_checkbox_2">Ceza ve Savcılık</string>
    <string name="lawyer_type_checkbox_3">Borç-Alacak</string>
    <string name="lawyer_type_checkbox_4">Tazminat</string>
    <string name="lawyer_type_checkbox_5">Miras</string>
    <string name="lawyer_type_checkbox_6">İşçi-İşveren</string>
    <string name="lawyer_type_checkbox_7">Sigorta</string>
    <string name="lawyer_type_checkbox_8">Bilişim</string>
    <string name="lawyer_type_checkbox_9">Arabulucu</string>
    <string name="lawyer_type_checkbox_10">İcra Takip</string>
    <string name="lawyer_type_checkbox_11">İdari Davalar</string>
    <string name="lawyer_type_checkbox_12">İflas</string>
    <string name="lawyer_type_checkbox_13">Patent Marka</string>
    <string name="lawyer_type_checkbox_14">Trafik ve Kaza</string>
    <string name="lawyer_type_checkbox_15">Uluslararası Hukuk</string>
    <string name="lawyer_type_checkbox_16">Vergi</string>
    <string name="lawyer_type_checkbox_17">Tüketici</string>


    <!-- Language Practices Texts -->

    <string name="language_practice_text">Dil Pratiği \n (Dil pratiği konusunda uzmanlar ya o dil için yeterli olduğunu gösterir doğrulanabilir bir diplomaya ya da o ülkede doğduğunu belgeleyecek bir belgeye sahip olmalıdır. )</string>
    <string name="language_practice_checkbox_1">Türkçe</string>
    <string name="language_practice_checkbox_2">İngilizce</string>
    <string name="language_practice_checkbox_3">Almanca</string>
    <string name="language_practice_checkbox_4">Fransızca</string>
    <string name="language_practice_checkbox_5">İspanyolca</string>
    <string name="language_practice_checkbox_6">Rusça</string>
    <string name="language_practice_checkbox_7">Çince</string>
    <string name="language_practice_checkbox_8">Japonca</string>
    <string name="language_practice_checkbox_9">Korece</string>
    <string name="language_practice_checkbox_10">Portekizce</string>
    <string name="language_practice_checkbox_11">Yunanca</string>
    <string name="language_practice_checkbox_12">Arapça</string>
    <string name="language_practice_checkbox_13">Farsça</string>
    <string name="language_practice_checkbox_14">Azerice</string>
    <string name="language_practice_checkbox_15">İtalyanca</string>

    <!-- E-Commerce Texts -->

    <string name="e_commerce_text">E-Ticaret Uzmanı \n \n (Bu alanda yalnızca diploma yeterliliği olan ya da kendini kitlelere kanıtlamış kişilerin başvuruları kabul edilecektir)</string>
    <string name="e_commerce_checkbox_1">Trendyol</string>
    <string name="e_commerce_checkbox_2">Hepsiburada</string>
    <string name="e_commerce_checkbox_3">N11</string>
    <string name="e_commerce_checkbox_4">Amazon</string>
    <string name="e_commerce_checkbox_5">Etsy</string>
    <string name="e_commerce_checkbox_6">Aliexpress</string>
    <string name="e_commerce_checkbox_7">Ebay</string>
    <string name="searh_expert_text">Uzman Ara ...</string>
    <string name="expert_category_text">Uzmanlık Kategorisi</string>
    <string name="your_work_text">Çalıştığın Uzmanlar</string>
    <string name="general_expert_persons">Uzmanlar</string>
    <string name="online_switch_text">online</string>

    <!-- User Profile Page Texts -->

    <string name="profile_user_username">Kullanıcı Adı:</string>
    <string name="profile_user_email">Kullanıcı E-mail:</string>
    <string name="profile_phone">Kullanıcı Telefon Numarası:</string>

    <!--Expert Profile Page Texts -->
    <string name="profile_expert_id">T.C Kimlik No: </string>
    <string name="profile_expert_category_name">Mesleği: </string>
    <string name="profile_expert_time">Seans Süresi: </string>
    <string name="profile_expert_price">Seans Ücreti: </string>
    <string name="profile_expert_category_detail">Meslek Detayları: </string>
    <string name="sign_out_text">Çıkış Yap</string>
    <string name="expert_about_text">Can make voice call with doctor. Can make voice call with doctor. Can make voice call with doctor</string>
    <string name="expert_name_text">Dr.Ali Altınel</string>
    <string name="expert_price_text">180</string>
    <string name="expert_appointment_text">Randevu</string>
    <string name="expert_price_type_text">TRY</string>
    <string name="about_button_text">Hakkında</string>
    <string name="expert_detail_files">Belgeler</string>
    <string name="self_profile_text">Kişisel Profil</string>
    <string name="self_profile_text_ex">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="job_text">Mesleği</string>
    <string name="job_text_ex">Çevre Mühendisi</string>
    <string name="job_details_text">Detaylar</string>
    <string name="appointment_text">Randevu Oluşturun</string>
    <string name="next_button_text">Devam > </string>
    <string name="hour_text">19.05</string>
    <string name="hour_title_text">Saat</string>
    <string name="date_text">18.02.2022</string>
    <string name="date_title_text">Tarih</string>
    <string name="sign_up_user_sign_in_text">Müşteri Hesabına Giriş Yapın</string>

</resources>