<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/language_practice_text"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="122dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/languageTypeChcBx1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_1">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_2">

            </CheckBox>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_3">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_4">

            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_5">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_6">

            </CheckBox>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <CheckBox
                android:id="@+id/languageTypeChcBx7"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language_practice_checkbox_7">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx8"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/language_practice_checkbox_8">

            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx9"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_9">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx10"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_10">

            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx11"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_11">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx12"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_12">

            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx13"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_13">

            </CheckBox>

            <CheckBox
                android:id="@+id/languageTypeChcBx14"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_14">

            </CheckBox>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/languageTypeChcBx15"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/language_practice_checkbox_15">

            </CheckBox>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
